Use list interface instead of actual implementation + Use the ArrayList implementation for all list occurrences + Fix a bug from previous commit
* It's better to use the abstract interface of a data structure as a return type / method parameter instead of an actual implementation (in this case: use List instead of LinkedList).
* Additionally, LinkedLists are quite slow in comparison to ArrayLists. So LinkedLists were replaced with ArrayLists.
* Fixed a little bug that I provoked with the previous commit.