@@ -10,6 +10,7 @@ import jasmin.core.Parser;
 import java.awt.*;
 import java.net.URL;
 import java.util.*;
+import java.util.List;
 import javax.swing.*;
 import javax.swing.event.*;
 import javax.swing.text.*;
@@ -21,8 +22,8 @@ import javax.swing.text.html.*;
 public class HelpBrowser extends javax.swing.JPanel {
 	
 	private MainFrame mframe = null;
-	LinkedList<URL> history;
-	LinkedList<URL> forwardhistory;
+	List<URL> history;
+	List<URL> forwardhistory;
 	URL currentURL = null;
 	String[] fontNames = null;
 	
@@ -37,8 +38,8 @@ public class HelpBrowser extends javax.swing.JPanel {
 		initComponents();
 		HtmlPane.setContentType("text/html");
 		HtmlPane.setEditable(false);
-		history = new LinkedList<>();
-		forwardhistory = new LinkedList<>();
+		history = new ArrayList<>();
+		forwardhistory = new ArrayList<>();
 		HTMLEditorKit editorKit = createEditorKit();
 		HtmlPane.setEditorKit(editorKit);
 		fontNames = java.awt.GraphicsEnvironment.getLocalGraphicsEnvironment().getAvailableFontFamilyNames();
@@ -220,7 +221,7 @@ public class HelpBrowser extends javax.swing.JPanel {
 	}
 	
 	public void back() {
-		URL url = history.removeLast();
+		URL url = history.remove(history.size() - 1);
 		forwardhistory.add(currentURL);
 		try {
 			HtmlPane.setContentType("text/html");
@@ -233,7 +234,7 @@ public class HelpBrowser extends javax.swing.JPanel {
 	}
 	
 	public void forward() {
-		URL url = forwardhistory.removeLast();
+		URL url = forwardhistory.remove(history.size() - 1);
 		history.add(currentURL);
 		try {
 			HtmlPane.setContentType("text/html");
